--- a/client/src/components/admin/purchasesAdmin/purchasesAdmin.css
+++ b/client/src/components/admin/purchasesAdmin/purchasesAdmin.css
@@ -138,3 +138,9 @@
     margin-bottom: 10px;
   }
 }
+
+.price-cell-purchasesAdmin {
+  direction: rtl;
+  text-align: center;
+  padding-right: 5px; /* תוכל לשנות את הערך בהתאם לצורך */
+}
