--- a/client/src/components/navBar/navBar.css
+++ b/client/src/components/navBar/navBar.css
@@ -29,7 +29,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  justify-content: space-evenly; /* שיניתי ל-space-evenly */
+  justify-content: space-evenly;
   width: 100%;
 }
 
@@ -99,28 +99,15 @@
   transition: all 0.3s ease;
 }
 
-.navbar-item-login::before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #000000;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.3s ease-in-out;
-}
-
-.navbar-item-login:hover::before {
-  visibility: visible;
-  transform: scaleX(1);
-}
-
 .navbar-item-login:hover {
   background: #0288d1;
   color: #ffffff;
   border-color: #0288d1;
+}
+
+/* Remove the underline on hover for the login/logout button */
+.navbar-item-login::before {
+  display: none;
 }
 
 .menu-toggle {
