--- a/client/src/pages/homePage/HomePage.css
+++ b/client/src/pages/homePage/HomePage.css
@@ -25,7 +25,7 @@
   background-color: #a9cce3;
   text-align: center;
   padding: 60px 0;
-  color: #fff;
+  color: #000000;
   position: sticky;
   top: 0;
   z-index: 10;
