--- a/client/src/components/Profile/purchases/MyPurchases.css
+++ b/client/src/components/Profile/purchases/MyPurchases.css
@@ -15,7 +15,7 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: 'Poppins', sans-serif;
+    font-family: Arial, sans-serif;
     background: linear-gradient(to bottom right, #e0eafc, #cfdef3);
     color: #333;
     text-align: center;
