--- a/client/src/pages/personalProcess/personalProcess.css
+++ b/client/src/pages/personalProcess/personalProcess.css
@@ -4,7 +4,8 @@ html, body {
     margin: 0;
     padding: 0;
     overflow-y: auto;
-    
+    font-family: Arial, sans-serif;
+
 }
 
 /* עיצוב כללי */
