--- a/client/src/pages/workshops/Payment/workshopPayment.css
+++ b/client/src/pages/workshops/Payment/workshopPayment.css
@@ -7,7 +7,7 @@
     box-shadow: 0 18px 35px rgb(0, 0, 0);
     border-radius: 18px;
     text-align: center;
-    font-family: 'Poppins', sans-serif;
+    font-family: Arial, sans-serif;
     transition: all 0.3s ease-in-out;
   }
   
