--- a/client/src/pages/workshops/workshop detail/WorkshopDetail.css
+++ b/client/src/pages/workshops/workshop detail/WorkshopDetail.css
@@ -7,7 +7,7 @@
   border-radius: 20px;
   box-shadow: 0 10px 20px rgb(0, 0, 0);
   text-align: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: Arial, sans-serif;
   transition: all 0.4s ease;
 }
 
