--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -24,6 +24,8 @@ body {
   align-items: center;
   min-height: 100vh;
   animation: fadeInUp 1s ease-in-out;
+  margin-top: 40px;
+  
 }
 
 .profile-container {
@@ -36,6 +38,7 @@ body {
   text-align: center;
   margin: 0 auto; /* מרכז את הקונטיינר */
   animation: fadeInUp 1s ease-in-out; /* הוספת האנימציה */
+  
 }
 
 .profile-title {
