--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -69,14 +69,27 @@ body {
   outline: none;
 }
 
+/* מיקום האייקון של הסיסמה */
 .label-input-login .icon {
   position: absolute;
-  left: 20px;
+  left: 20px; /* מיקום האייקון של האימייל/סיסמה */
   top: 50%;
   transform: translateY(-50%);
   color: #777;
   font-size: 18px;
 }
+
+/* מיקום האייקון של העין */
+.label-input-login .eye-icon {
+  position: absolute;
+  left: 50px; /* מיקום האייקון של העין בצד ימין */
+  top: 50%;
+  transform: translateY(-50%);
+  color: #777;
+  font-size: 18px;
+  cursor: pointer;
+}
+
 
 /* Button styling */
 .btn-login {
