--- a/client/src/components/register/register.css
+++ b/client/src/components/register/register.css
@@ -57,6 +57,7 @@
   outline: none;
 }
 
+/* מיקום האייקון של הסיסמה */
 .register-page-input-group .icon {
   position: absolute;
   left: 20px; /* מיקום האייקון מימין */
@@ -65,6 +66,18 @@
   color: #777;
   font-size: 18px;
 }
+
+/* מיקום האייקון של העין */
+.register-page-input-group .eye-icon {
+  position: absolute;
+  left: 50px; /* מיקום האייקון של העין בצד ימין */
+  top: 50%;
+  transform: translateY(-50%);
+  color: #777;
+  font-size: 18px;
+  cursor: pointer;
+}
+
 
 .register-page-btn {
   background: linear-gradient(135deg, #007bff, #0056b3);
