--- a/client/src/pages/contactsUs/ContactsUs.css
+++ b/client/src/pages/contactsUs/ContactsUs.css
@@ -15,12 +15,12 @@ html, body {
   text-align: center;
   color: #000000;
   font-size: 2.5rem;
-  margin-bottom: 30px;
+  margin-bottom: -20px;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 1.5px;
   animation: fadeIn 1s ease-in-out; /* אנימציית Fade-in */
-  margin-bottom: 20px;
+  margin-top: 80px;
 }
 
 /* עיצוב לדף ה-ContactsUs בלבד */
