--- a/client/src/pages/courses/Payment/coursePayment.css
+++ b/client/src/pages/courses/Payment/coursePayment.css
@@ -6,7 +6,12 @@
 }
 .payment-page-container{
   box-shadow: 0 10px 20px rgb(0, 0, 0);
+  margin-top: 90px;
 }
+.payment-page-container h1 {
+  margin-top: -20px; /* אפשר לשנות את הערך כדי למקם את הכותרת למעלה */
+}
+
 
 .card-type-button {
   border: 2px solid transparent;
